--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,12 @@
 daemon off; # for docker
+error_log stderr;
+
 worker_processes  1;
 events {
   worker_connections  1024;
 }
 
 http {
-  lua_package_path conf/mysql.lua;
-
   server {
     listen       80;
     server_name  localhost;
